fix: music player z-index first

--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -74,7 +74,7 @@ ul.task-list {
 
 .sidebar-main-container{
     width: 330px;
-    z-index: 14;
+    z-index: 9;
     @media (max-width: 1360px) {
         display: none;
         width: 0;
